# millionaire

./: .envrc  .gitignore  .sops.yaml  .typos.toml  README.md  devenv.nix  devenv.yaml  flake.nix  me.pub  taplo.toml  ty.toml
.claude/memory/: MEMORY.md  feedback_argocd_sync.md  feedback_clarify_before_acting.md  feedback_concise_config.md  feedback_devenv_tools.md  feedback_direnv_for_hooks.md  feedback_generated_themes.md  feedback_kubeconfig.md  feedback_lazy_image_builds.md  feedback_module_system.md  feedback_nixidy_resource_overrides.md  feedback_no_claude_code_footer.md  feedback_no_manual_secrets.md  feedback_no_untested_infra_changes.md  feedback_no_user_dotfiles.md  feedback_one_at_a_time.md  feedback_prefer_bun.md  feedback_prefer_rust_for_new_services.md  feedback_pulumi_manual.md  feedback_pulumi_never_reinstall_cluster_nodes.md  nixos-deploy-fix.md  project_background_task_reaping.md  project_cilium_l2_native_routing_bug.md  project_cloud_burst_capi.md  project_coredns_magicdns_search_hijack.md  project_falcon_esp32_build_host.md  project_gitops_health.md  project_hetzner_image_strategy.md  project_hyena_adguard_dns.md  project_internal_gateway_tailnet_relay.md  project_nixidy_render_validation.md  project_node_config_cloud_burst_base.md  project_org_productivity_stack.md  project_pr_split_2026_06.md  project_rke2_etcd_pipe_freeze_outage.md  project_worktree_commit_mechanics.md
apps/sveltekit-demo/: .envrc  bun.nix  devenv.nix  package.json
docs/: cloud-burst.md  ereader-opds.md  internal-services-over-tailnet.md  network-audit-2026-03-16.md  tailscale-integration.md
embedded/: .gitignore  Cargo.toml  QUICKSTART.md  README.md  TARGETS.md  devenv.nix  devenv.yaml  rustfmt.toml
embedded/apps/hello-world/: Cargo.toml
embedded/apps/hello-world/src/: lib.rs
embedded/apps/web-request/: Cargo.toml
embedded/apps/web-request/src/: lib.rs
embedded/boards/arduino-uno-r3/: .envrc  Cargo.toml
embedded/boards/arduino-uno-r3/.cargo/: config.toml
embedded/boards/arduino-uno-r3/src/: main.rs
embedded/boards/esp32-c3/: Cargo.toml  build.rs
embedded/boards/esp32-c3/.cargo/: config.toml
embedded/boards/esp32-c3/src/: main.rs
embedded/boards/esp32-s3/: Cargo.toml
embedded/boards/esp32-s3/.cargo/: config.toml
embedded/boards/esp32-s3/src/: main.rs
embedded/boards/stm32-nucleo/: Cargo.toml  memory.x
embedded/boards/stm32-nucleo/.cargo/: config.toml
embedded/boards/stm32-nucleo/src/: main.rs
embedded/boards/teensy-4.1/: Cargo.toml
embedded/boards/teensy-4.1/.cargo/: config.toml
embedded/boards/teensy-4.1/src/: main.rs
embedded/shared/base/: Cargo.toml
embedded/shared/base/src/: board.rs  lib.rs
embedded/shared/wifi/: Cargo.toml
embedded/shared/wifi/src/: lib.rs
embedded/templates/app/: Cargo.toml  cargo-generate.toml
embedded/templates/app/src/: lib.rs
embedded/templates/board/avr/: .envrc  Cargo.toml  cargo-generate.toml
embedded/templates/board/avr/.cargo/: config.toml
embedded/templates/board/avr/src/: main.rs
embedded/templates/board/cortex-m/: Cargo.toml  cargo-generate.toml  memory.x
embedded/templates/board/cortex-m/.cargo/: config.toml
embedded/templates/board/cortex-m/src/: main.rs
embedded/templates/board/esp32/: Cargo.toml  cargo-generate.toml
embedded/templates/board/esp32/.cargo/: config.toml
embedded/templates/board/esp32/src/: main.rs
embedded/templates/shared/: Cargo.toml  cargo-generate.toml
embedded/templates/shared/src/: lib.rs
esp32-s3/: .envrc  .gitignore  FRAMEWORKS.md  HARDWARE.md  QUICKSTART.md  README.md  TODO.md  default.nix  devenv.nix  devenv.yaml
modules/: aerospace.nix  atuin.nix  calendar.nix  darwin.nix  default.nix  devenv.nix  disko.nix  git.nix  granted.nix  helix.nix  images.nix  khal.nix  logseq.nix  nix.nix  nixos.nix  opencode.nix  starship.nix  stylix.nix  users.nix  vdirsyncer.nix  yazi.nix  zed.nix  zellij.nix  zsh.nix
modules/work/: datadog.nix  default.nix  granted.nix
modules/zellij/: config.kdl  default.nix
modules/zellij/layouts/: project.kdl
nixidy/: default.nix
nixidy/apps/: default.nix
nixidy/apps/development/: forgejo.nix  sveltekit-demo.nix  windmill-dashboard.json  windmill.nix
nixidy/apps/finance/: actual.nix  firefly.nix  sure.nix
nixidy/apps/health/: mealie.nix
nixidy/apps/home/: baikal.nix  chirpstack.nix  frigate-dashboard.json  frigate.nix  govee2mqtt.nix  home-assistant.nix  homepage.nix  kosync.nix  logseq.nix  mosquitto.nix  org-bridge.nix  org-storage.nix  siyuan.nix  syncthing.nix  webdav.nix  zigbee2mqtt.nix  zwave-js-ui.nix
nixidy/apps/identity/: hydra.nix  keto.nix  keycloak-operator.nix  keycloak.nix  kratos.nix  oathkeeper.nix  oauth2-proxy.nix
nixidy/system/: default.nix
options/: default.nix  elvish.nix  profiles.nix  zsh-autosuggestions.nix  zsh-helix-mode.nix
org-bridge/: Cargo.toml  devenv.nix  devenv.yaml
org-bridge/src/: bridge.rs  caldav.rs  config.rs  lib.rs  main.rs  orgparse.rs  state.rs  syncthing.rs
org-bridge/test-fixtures/org/: tasks.org
pulumi/: Pulumi.yaml  __main__.py  default.nix  pyproject.toml
pulumi/millionaire/: __init__.py  nixos.py  ory.py
pulumi/sdks/bitwarden/: pyproject.toml
pulumi/sdks/bitwarden/pulumi_bitwarden/: README.md  __init__.py  _inputs.py  _utilities.py  attachment.py  folder.py  get_attachment.py  get_folder.py  get_item_login.py  get_item_secure_note.py  get_item_ssh_key.py  get_org_collection.py  get_org_group.py  get_org_member.py  get_organization.py  get_project.py  get_secret.py  item_login.py  item_secure_note.py  item_ssh_key.py  org_collection.py  outputs.py  project.py  provider.py  pulumi-plugin.json  secret.py
pulumi/sdks/bitwarden/pulumi_bitwarden/config/: __init__.pyi  outputs.py  vars.py
secrets/sops/: default.yaml
static/: cloud-worker.nix  falcon.nix  generated.json  hetzner-image.nix  hyena.nix  klipper-mcu.config  printer.nix  rke2-fips-overlay.nix  rpi.nix  server.nix  tailnet.nix  vps.nix
static/facter/: axolotl.json  bonobo.json  chinchilla.json  default.nix  dingo.json  falcon.json  octopus.json  sirver.json  systeamadeck.json
(+85 files in other folders)
