[project]
name = "millionaire"
version = "0.0.1"
description = "Millionaire deployments"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
  "pulumi>=3.206.0",
  "pulumi-cloudflare>=6.13.0",
  "pulumi-command>=1.1.3",
  "pulumi-bitwarden",
  "pulumi-random>=4.19.1",
  "pulumi-hcloud>=1.22.0",
  "pulumi-tls>=5.0.0",
  "requests>=2.31.0",
  "cryptography>=42.0.0",
]

[dependency-groups]
dev = ["ruff>=0.14.6", "taplo>=0.9.3", "ty>=0.0.11"]

[tool.uv.sources]
pulumi-bitwarden = { path = "sdks/bitwarden" }
