[package]
name         = "homelab-hello-world"
edition      = "2024"
version      = "0.1.0"
rust-version = "1.88"
license      = "MIT"
description  = "Periodic hello-world loop. Async (embassy) and blocking variants so any board can run it."

[features]
default  = []
embassy  = ["dep:embassy-time"]
blocking = []

[dependencies]
homelab-shared = { path = "../../shared/base" }
embedded-hal   = "1.0"

embassy-time = { version = "0.5", default-features = false, optional = true }
