[package]
name = "homelab-esp32-c3"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ESP32-C3 board binary."

[[bin]]
name = "homelab-esp32-c3"
path = "src/main.rs"

[dependencies]
homelab-shared = { path = "../../shared/base" }
homelab-hello-world = { path = "../../apps/hello-world", features = [
  "embassy",
] }

esp-hal = { workspace = true, features = ["esp32c3", "log-04", "unstable"] }
esp-rtos = { workspace = true, features = ["esp32c3", "embassy", "log-04"] }
esp-bootloader-esp-idf = { workspace = true, features = ["esp32c3", "log-04"] }
esp-println = { workspace = true, features = ["esp32c3", "log-04", "auto"] }
esp-backtrace = { workspace = true, features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
critical-section.workspace = true
static_cell.workspace = true
log.workspace = true

embassy-executor = { workspace = true, features = ["log"] }
embassy-time = { workspace = true, features = ["log"] }
