[package]
name         = "homelab-{{project-name}}"
edition      = "2021"
version      = "0.1.0"
rust-version = "1.88"
license      = "MIT"
description  = "{{ravedude_board}} board binary (AVR {{target_cpu}})."

[[bin]]
name  = "homelab-{{project-name}}"
path  = "src/main.rs"
test  = false
bench = false

# NOTE: this crate is in the workspace `exclude` list and built with the
# avr-rust toolchain (see ../../TARGETS.md and .envrc). It cannot inherit
# `{ workspace = true }` deps; pin versions explicitly.

[dependencies]
homelab-shared = { path = "../../shared/base" }
homelab-{{app}} = { path = "../../apps/{{app}}", default-features = false, features = ["blocking"] }

# arduino-hal isn't on crates.io; pin to the same commit avr-hal-template uses.
arduino-hal = { git = "https://github.com/rahix/avr-hal", rev = "e5c8f37fe48419956e722490a82b9ca9b9fc61a2", features = ["{{hal_feature}}"] }

panic-halt   = "1.0"
embedded-hal = "1.0"
ufmt         = "0.2"

[profile.release]
opt-level = "s"
lto       = true
panic     = "abort"  # required by build-std-features = ["panic_immediate_abort"]

[profile.dev]
panic = "abort"
