{%- assign chip = mcu | replace: "-", "" -%}
[package]
name         = "homelab-{{project-name}}"
edition.workspace      = true
version.workspace      = true
rust-version.workspace = true
license.workspace      = true
description  = "{{mcu}} board binary."

[[bin]]
name = "homelab-{{project-name}}"
path = "src/main.rs"

[dependencies]
homelab-shared = { path = "../../shared/base" }
homelab-{{app}} = { path = "../../apps/{{app}}", features = ["embassy"] }

esp-hal                = { workspace = true, features = ["{{chip}}", "log-04", "unstable"] }
esp-rtos               = { workspace = true, features = ["{{chip}}", "embassy", "log-04"] }
esp-bootloader-esp-idf = { workspace = true, features = ["{{chip}}", "log-04"] }
esp-println            = { workspace = true, features = ["{{chip}}", "log-04", "auto"] }
esp-backtrace          = { workspace = true, features = ["{{chip}}", "panic-handler", "println"] }
critical-section.workspace = true
static_cell.workspace      = true
log.workspace              = true

embassy-executor = { workspace = true, features = ["log"] }
embassy-time     = { workspace = true, features = ["log"] }
